html-web-pages w/ changes

--- a/html-web-page/index.html
+++ b/html-web-page/index.html
@@ -46,11 +46,12 @@
             <td>&check;</td>
             <td>&check;</td>
           </tr>
-          <td>Monthly jellies come with commemorative mason jars</td>
-          <td>&nbsp;</td>
-          <td>&check;</td>
-          <td>&check;</td>
-
+          <tr>
+            <td>Monthly jellies come with commemorative mason jars</td>
+            <td>&nbsp;</td>
+            <td>&check;</td>
+            <td>&check;</td>
+          </tr>
           <tr>
             <td>Free bonus jar of preserves bi-money</td>
             <td>&nbsp;</td>
@@ -78,15 +79,17 @@
     </div>
 
     <div>
-      <input type="text" id="name" class="name" placeholder="Your Name" />
-      <select name="planSelector">
-        <option value="Select">Select Your Plan:</option>
-        <option value="Basic Plan">Basic Plan</option>
-        <option value="Deluxe Plan">Deluxe Plan</option>
-        <option value="Jelly Giant Plan">Jelly Giant Plan</option>
-      </select>
+      <form>
+        <input type="text" id="name" class="name" placeholder="Your Name" />
+        <select name="planSelector">
+          <option value="Select">Select Your Plan:</option>
+          <option value="Basic Plan">Basic Plan</option>
+          <option value="Deluxe Plan">Deluxe Plan</option>
+          <option value="Jelly Giant Plan">Jelly Giant Plan</option>
+        </select>
 
-      <input type="submit" value="Submit" />
+        <input type="submit" value="Submit" />
+      </form>
     </div>
   </body>
 </html>
