--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -12,7 +12,6 @@
   <body>
     <div class="container">
       <div class="row">
-        <!-- <header> -->
         <div class="column-half header-column">
           <img
             class="header-logo"
@@ -29,22 +28,31 @@
           <button class="contact-button">Contact Us</button>
         </div>
       </div>
-      <!-- <div class="row center-row">
-        <img class="hero-img" src="images/hero.jpg" alt="smiling-woman" />
-        <div class="center-row-text">
-          <h1>The EMR Reimagined for Primary Care</h1>
-          <p>
-            Can't remember the last time you talked with a patient without
-            focusing on the EMR? Canvas lets you rediscover joy in the work you
-            do. Capture meaningful data, identify gaps in case, and move
-            seamlessly between tasks within the platform. You stay present with
-            patients while your whole care team stays up-to-speed. Be a better
-            doctor with Canvas, designed for primary care providers with the
-            help of primary care providers.
-          </p>
-          <button>Get Started</button>
+      <div class="row center-row">
+        <div class="column-full">
+          <img class="hero-img" src="images/hero.jpg" alt="smiling-woman" />
+
+          <div class="center-row-text">
+            <h1 class="center-row-header">
+              The EMR Reimagined for Primary Care
+            </h1>
+            <p>
+              Can't remember the last time you talked with a patient without
+              focusing on the EMR? Canvas lets you rediscover joy in the work
+              you do. Capture meaningful data, identify gaps in case, and move
+              seamlessly between tasks within the platform. You stay present
+              with patients while your whole care team stays up-to-speed. Be a
+              better doctor with Canvas, designed for primary care providers
+              with the help of primary care providers.
+            </p>
+            <button class="get-started-button">Get Started</button>
+          </div>
         </div>
-      </div> -->
+      </div>
+      <div class="row">
+        <div class="column-one-half"></div>
+        <div class="column-one-half"></div>
+      </div>
     </div>
   </body>
 </html>
