html-forms with corrections

--- a/html-forms/index.html
+++ b/html-forms/index.html
@@ -8,13 +8,13 @@
 
     <form name="survey">
       <div id="emailField">
-        <label for="emailField">Email</label>
+        <label for="email">Email</label>
       </div>
 
       <input type="email" id="email" name="emailField" />
       <div><label for="CodingDropdown">Why is coding cool?</label></div>
 
-      <div id="codingDropdown">
+      <div id="CodingDropdown">
         <select name="CodingDropdown" id="CodingDropdown1">
           <option value="Select">Select an option</option>
           <option value="interesting">Because it's interesting</option>
@@ -47,7 +47,7 @@
       </div>
 
       <div id="commentBox">
-        <div><label for="commentBox">Comments</label></div>
+        <div><label for="comments">Comments</label></div>
 
         <textarea name="comments" id="comments" cols="30" rows="12"> </textarea>
       </div>
