--- a/css-layout-classes/index.html
+++ b/css-layout-classes/index.html
@@ -13,7 +13,7 @@
       </div>
       <div class="row">
         <div class="column-one-third">
-          <img src="images/link.png" />
+          <img src="images/link.png" alt="link" />
         </div>
         <div class="column-one-third">
           <h2>Super Smash Bros. Ultimate</h2>
@@ -26,21 +26,21 @@
           </p>
         </div>
         <div class="column-one-third">
-          <img src="images/yoshi.png" />
+          <img src="images/yoshi.png" alt="yoshi" />
         </div>
       </div>
       <div class="row">
         <div class="column-one-fourth">
-          <img src="images/kirby.png" />
+          <img src="images/kirby.png" alt="kirby" />
         </div>
         <div class="column-one-fourth">
-          <img src="images/fox.png" />
+          <img src="images/fox.png" alt="fox" />
         </div>
         <div class="column-one-fourth">
-          <img src="images/pikachu.png" />
+          <img src="images/pikachu.png" alt="pikachu" />
         </div>
         <div class="column-one-fourth">
-          <img src="images/ness.png" />
+          <img src="images/ness.png" alt="ness" />
         </div>
       </div>
 
@@ -60,12 +60,12 @@
           </p>
         </div>
         <div class="column-one-third">
-          <img src="images/dk.png" />
+          <img src="images/dk.png" alt="donkey kong" />
         </div>
       </div>
       <div class="row">
         <div class="column-one-thirds">
-          <img src="images/mario.png" />
+          <img src="images/mario.png" alt="mario" />
         </div>
         <div class="column-two-thirds">
           <h2>Mario</h2>
